group 'sncf.connect.tech.flutter_eco_mode'
version '1.0-SNAPSHOT'

buildscript {

    repositories {
        google()
        mavenCentral()
    }

    dependencies {
        classpath 'com.android.tools.build:gradle:8.3.2'
    }

}

allprojects {

    repositories {
        google()
        mavenCentral()
    }
}

apply plugin: 'com.android.library'
android {

    if (project.android.hasProperty("namespace")) {
        namespace 'sncf.connect.tech.flutter_eco_mode'
    }

    compileSdkVersion 34

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = '17'
    }

    sourceSets {
        main.java.srcDirs += 'src/main/kotlin'
        test.java.srcDirs += 'src/test/kotlin'
    }

    defaultConfig {
        minSdkVersion 19
    }

    dependencies {
        testImplementation 'org.jetbrains.kotlin:kotlin-test'
        testImplementation 'junit:junit:4.13.2'
        testImplementation 'org.powermock:powermock-api-mockito:1.6.2'
        testImplementation 'org.powermock:powermock-module-junit4-rule-agent:1.6.2'
        testImplementation 'org.powermock:powermock-module-junit4-rule:1.6.2'
        testImplementation 'org.powermock:powermock-module-junit4:1.6.2'
        implementation('com.google.code.gson:gson:2.10.1')
    }

    tasks.withType(Test).configureEach {
        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    }

    testOptions {

        unitTests.all {
            useJUnitPlatform()

            testLogging {
               events "passed", "skipped", "failed", "standardOut", "standardError"
               outputs.upToDateWhen {false}
               showStandardStreams = true
            }
        }
    }
}
